Update 'izjxmn5s9-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:b30d618c0fad4a6b53aa714a6e323e8274c74213@sha256:758a095b65d92809d52de58ab9f9b33e4d74d9deb06b9e74d7c9964fbd2b5168

--- a/components/izjxmn5s9-go/overlays/development/deployment-patch.yaml
+++ b/components/izjxmn5s9-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: izjxmn5s9-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:b30d618c0fad4a6b53aa714a6e323e8274c74213@sha256:758a095b65d92809d52de58ab9f9b33e4d74d9deb06b9e74d7c9964fbd2b5168
+          name: container-image
